# Multiple-LCD-Demo

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
.github/workflows/: build.yml
components/list/: CMakeLists.txt  idf_component.yml  list.c
components/list/include/: list.h
doc/hardware/PCB-EasyEDA/: 1-PCB_PCB_ESP32S3_multiple_lcd.json  1-Schematic_ESP32S3_multiple_lcd.json
main/: CMakeLists.txt  Kconfig.projbuild  app_battery.c  app_battery.h  app_network.c  app_network.h  app_sd.c  app_sd.h  app_storage.c  app_storage.h  disp_lvgl.c  disp_lvgl.h  idf_component.yml  main.c  main_espbox.c
main/board/: board.h  board_custom.h  board_espbox.h  board_hmi.h
main/display/: lcd.h  lcd_i2c.c  lcd_parallel.c  lcd_spi.c
main/fonts/: digital_30.c  digital_50.c  digital_50_bold.c
main/images/: clock_hour.c  clock_minute.c
main/images/weather/: weather_01d.c  weather_01n.c  weather_02d.c  weather_02n.c  weather_03d.c  weather_03n.c  weather_04d.c  weather_04n.c  weather_09d.c  weather_09n.c  weather_10d.c  weather_10n.c  weather_11d.c  weather_11n.c  weather_13d.c  weather_13n.c  weather_50d.c  weather_50n.c
main/lv_100ask_2048/: lv_100ask_2048.c  lv_100ask_2048.h
tools/: launchpad.toml
